# autotrade

./: .gitignore  README.md  exploratory_market_analysis.ipynb  main.py  pyproject.toml  settings.py  streaming.py  trade.py
.ipynb_checkpoints/: exploratory_market_analysis-checkpoint.ipynb
