[tool.poetry]
name = "autotrade"
version = "0.1.0"
description = ""
authors = ["thesugar"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.1"
numpy = "^1.18.1"
python-dotenv = "^0.12.0"
requests = "^2.23.0"
oandapyV20 = "^0.6.3"
jupyter = "^1.0.0"
python-dateutil = "^2.8.1"
matplotlib = "^3.2.0"
plotly = "^4.5.3"
mplfinance = "^0.12.3-alpha.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
